--- a/sanpasjs-wesite/src/pages/index.astro
+++ b/sanpasjs-wesite/src/pages/index.astro
@@ -7,9 +7,9 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>SanPasJs</title>
 	</head>
 	<body>
-		<h1>Astro</h1>
+		<h1>SanPasJs</h1>
 	</body>
 </html>
